styles.scss
/* ... */
// Detail
detail {
    h5 {
        text-transform: uppercase;
        padding: $margin 2 * $margin;
        border: 2px solid black;
        cursor: pointer;
        font-weight: bold;
        display: inline-block;
    }
    .module-image {
        padding-top: 35%;
        background-size: cover;
        background-position: 50% 35%;
        position: relative;
        margin-bottom: 32px;
        .pattern {
            position: relative;
            svg-inline {
                position: absolute;
                z-index: 100;
                margin: -25% 0 0 0;
                left: -197px;
            }
        }
        .pattern-snapshot {
            background-repeat: no-repeat;
            position: absolute;
            top: 0; bottom: 0;
            left: 0; right: 0;
            opacity: .5;
        }
        .overlay {
            position: absolute;
            top: 0; bottom: 0;
            left: 0; right: 0;
            z-index: 0;
            background: black;
            opacity: .5;
        }
        .module-header, .module-image-caption {
            position: absolute;
            top: 18%; bottom: 0;
            left: 7%; right: 4%;
            color: white;
            z-index: 100;
        }
        .module-image-caption {
            top: initial; 
            p::before {
                content: "/";
                position: absolute;
                left: -2 * $margin;
            }
        }
        .module-type {
            font-size: 40px;
        }
        .module-title {
            margin-top: 10px;
            font-size: 80px;
        }
        .module-save, .module-share {
            display: inline-block;
            text-transform: uppercase;
            font-weight: bold;
            svg-inline {
                display: inline-block;
                position: relative;
                top: 8px;
                width: 35px;
            }
            svg * { fill: white; }
        }
        .story-extra {
            position: absolute;
            top: -2*$margin;
            right: 0; 
            text-align: right;
            font-weight: bold;
            text-transform: uppercase;
            svg-inline {
                height: 40px;
                position: absolute;
                right: 0;
                svg { height: 100%; }
            }
        }
    }
    .column-a, .column-b {
        //margin-top: 32px;
        h3.bigger {
            padding-top: 0;
            padding-bottom: 0;
            color: black;
            font-size: 40px;
            margin-top: 0;
        }
        h4 {
            padding: $margin 0;
            //color: $gray;
            //text-decoration: underline;
            font-size: 19px;
            line-height: 22px;
        }
        .contributor-image {
            width: 100%;
            height: 165px;
            border: 2px solid black;
            background-size: cover;
            background-position: 50% 30%;
        }
        .contributor-name {
            position: relative;
            .first { 
                margin-bottom: 0; 
                padding-bottom: 0;
            }
            .last { 
                margin-top: 0; 
                padding-top: 0;
            }
        }
        .your-arrow {
            position: absolute;
            margin-left: 10px;
            top: -65%;
        }
        .tag {
            color: $gray;
        }
    }
    .column-b {
        .risks {
            margin-bottom: 32px;
            &.clickable {
                text-decoration: none;
            }
            .heading {
                border-bottom: $margin solid black;
                margin-bottom: $margin * 2;
                svg-inline, h3 {
                    display: inline-block;
                }
                h3 {
                    margin-left: $margin;
                    margin-bottom: 4px;
                }
                .arrow {
                    @include prefix(transition, transform $transition linear, webkit moz);
                    transform: rotate(-90deg) scale(0.75);
                    svg * { fill: $lightgray; }
                }
                .arrow.selected {
                    transform: rotate(90deg) scale(0.75);
                    svg * { fill: black; }
                }
            }
        }
        .related {
            padding: 4 * $margin;
            padding-top: $margin;
            background: $lightergray;
            h3 {
                padding-left: 22px;
            }
            ul { 
                list-style-type: square;
                text-transform: uppercase;
            }
            li {
                font-weight: bold;
                padding: 2px 0;
            }
        }
    }
    .content {
        //margin-top: 32px;
        h3 {
            margin-top: 0;
            margin-bottom: 2 * $margin;
        }
        img {
            max-width: 100%;
        }
        hr.footnotes-sep {
            display: none;
        }
        .module-type {
            margin-top: 3 * $margin;
        }
        .epigraphs {
            margin: 0 2*$margin 2*$margin 2*$margin;
            .attribution * { 
                display: inline;
                color: $gray; 
            }
            .attribution::before { 
                content: "—"; 
                color: $gray; 
            }
        }
        .learn-more {
            h4 {
                margin: 3 * $margin 0;
            }
            a {
                color: $gray;
                font-weight: bold;
                text-decoration: underline;
            }
        }
    }
    .edit-link {
        position: fixed;
        bottom: 0; right: 0;
        text-decoration: none;
        z-index: 2000;
        opacity: 0;
        width: 20px; height: 20px;
        &:hover { 
            opacity: 1; 
            width: initial; height: initial;
            padding: 10px;
        }
    }
}
/* ... */

